--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Atlas - Contact</title>
-  <link rel="stylesheet" href="/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">  
+  <script type="module" crossorigin src="/assets/main-6KbBJ73I.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/main-RF3m4Ayn.css">
 </head>
 <body>
   <div class="theme-toggle">
@@ -38,6 +39,5 @@
       </div>
     </div>
   </div>
-  <script type="module" src="/main.js"></script>
 </body>
 </html>
