--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">  
-  <script type="module" crossorigin src="/assets/main-6KbBJ73I.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/main-RF3m4Ayn.css">
+  <script type="module" crossorigin src="/atlas-digital/assets/main-6KbBJ73I.js"></script>
+  <link rel="stylesheet" crossorigin href="/atlas-digital/assets/main-RF3m4Ayn.css">
 </head>
 <body>
   <div class="theme-toggle">
