--- a/services.html
+++ b/services.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Atlas - Home</title>
+  <title>Atlas - Home</title>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">  
-  <script type="module" crossorigin src="/assets/main-6KbBJ73I.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/main-RF3m4Ayn.css">
+  <script type="module" crossorigin src="/atlas-digital/assets/main-6KbBJ73I.js"></script>
+  <link rel="stylesheet" crossorigin href="/atlas-digital/assets/main-RF3m4Ayn.css">
 </head>
 <body>
   <div class="theme-toggle">
@@ -33,6 +34,7 @@
         <p>Welcome to Atlas, where we craft cutting-edge web experiences with a futuristic vision.</p>
       </div>
     </div>
-  </div>
+  </div>
+
 </body>
 </html>
